[tool.poetry]
name = "question-answering-system"
version = "0.1.0"
description = ""
authors = ["Amir-Seif-Mohamed <s-amir.seif@zewailcity.edu.eg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
transformers = "^4.35.2"
uvicorn = "^0.24.0.post1"
unicorn = "^2.0.1.post1"
torch = "^2.1.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
